Fix small screen overflow issue

--- a/src/_sass/style.scss
+++ b/src/_sass/style.scss
@@ -138,7 +138,7 @@ a {
         }
         display: grid;
         place-items: center;
-        height: 90vh;
+        min-height: 90vh;
     }
     .headline {
         @include font.family(raleway);
